--- a/stylesheets/news.css
+++ b/stylesheets/news.css
@@ -8,13 +8,14 @@ footer{
     margin: 32px;
 }
 
-div{
+div.card{
     animation: div_increment 2s linear;
     margin: 32px;
     padding: 0;
     border-radius: 8px;
     border: solid rgba(126, 126, 126, 0.25) 0.5px;
     box-shadow: 0.5px 0.5px rgba(126, 126, 126, 0.25);
+    background-color: cornsilk;
 }
 
 @keyframes div_increment {
@@ -26,7 +27,7 @@ div{
         transform: scale(1.0);}
 }
 
-div:hover {
+div.card:hover {
     -webkit-animation: div_hover 5s linear infinite;
 }
 
@@ -46,7 +47,7 @@ img{
     box-shadow: 0 1px rgba(126, 126, 126, 0.2);
 }
 
-h4{
+h4, h6{
     color: dimgray;
     font-family: Rubik;
     margin: 0;
@@ -54,7 +55,15 @@ h4{
     text-align: center;
 }
 
+h6{
+    font-weight: bold;
+    padding-bottom: 0;
+}
 p{
     margin: 0;
     padding: 8px;
+}
+
+#collapse_target{
+    animation: none;
 }
