--- a/stylesheets/news.css
+++ b/stylesheets/news.css
@@ -1,7 +1,10 @@
-main{
-    margin: 52px 12% 0;
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
+body{
+    width: 100%;
+}
+
+.main{
+    width: 100%;
+    margin-top: 80px;
 }
 
 footer{
@@ -9,8 +12,9 @@ footer{
 }
 
 div.card{
+    height: max-content;
     animation: div_increment 2s linear;
-    margin: 32px;
+    margin: 24px;
     padding: 0;
     border-radius: 8px;
     border: solid rgba(126, 126, 126, 0.25) 0.5px;
